Version 1.4.0
[list]
[*]Added a new surface builder system which allows me much finer control over how biomes are generated. This includes incorporation of K.JPG's OpenSimplex2 (more information in credits section of OP).
[*]Changed how terracotta layers generate in badlands to be random based on the world seed instead of fixed. This only affects new worlds.
[*]Fixed an issue where beaches were generating with grass. This may cause surface material seams but can easily be manually fixed.
[*]Fixed an issue where frozen beaches were generating in places they shouldn't. Existing frozen beaches will revert to normal beaches.
[/list]

Version 1.3.4
[list]
[*]Updated to Extended Addon API 1.1.0.
[/list]

Version 1.3.3
[list]
[*]Added new red sandstone desert pyramids which can spawn in outback and badlands.
[*]Added the ability to double click biomes in the biome configuration menu to toggle whether they are enabled.
[*]Changed world configuration to have deco generation enabled by default if deco is also installed. Deco generation may still be disabled if you wish.
[*]Changed world configuration so that enabling deco automatically enables all deco exclusive biomes. Previously it was possible to enable deco but then not get deco biomes because you had to specifically re-enable them.
[*]Fixed an issue where frozen springs, plains, temperate forest, and patagonia were not properly generating reeds.
[*]Fixed an issue where the game would crash if spaces were present in the generator options string.
[/list]

Version 1.3.2
[list]
[*]Added edge variants to rainforest and jungle in new worlds which have slightly less dense vegetation, and which will not spawn melons. This helps provide a transition into the heavy vegetation of these biomes, and makes easy melons harder to obtain by preventing them from spawning at the very edge of these jungle variants.