@@ -7,7 +7,6 @@ public class BTASurfaceBuilderTropics extends BTASurfaceBuilder {
 		byte seaLevel = 63;
 
 		float temperature = biome.getFloatTemperature();
-		boolean useSand = this.sandNoise[i + k * 16] + rand.nextDouble() * 0.2D > 0.0D;
 		boolean useGravel = this.gravelNoise[i + k * 16] + rand.nextDouble() * 0.2D > 3.0D;
 		int soilDepthNoiseSample = (int)(this.soilDepthNoise[i + k * 16] / 3.0D + 3.0D + rand.nextDouble() * 0.25D);
 		int remaingDepth = -1;
