@@ -1,8 +1,9 @@
 Version 1.4.0
 [list]
 [*]Added a new surface builder system which allows me much finer control over how biomes are generated. This includes incorporation of K.JPG's OpenSimplex2 (more information in credits section of OP).
+[*]Changed how sandy shorelines generate to remove directional artifacting by switching from perlin to simplex noise. This only affects new worlds.
 [*]Changed how terracotta layers generate in badlands to be random based on the world seed instead of fixed. This only affects new worlds.
-[*]Fixed an issue where beaches were generating with grass. This may cause surface material seams but can easily be manually fixed.
+[*]Fixed an issue where beaches were generating with grass. This may cause surface material seams but can easily be manually fixed (or old chunks can be deleted in MCEdit and they will regenerate)
 [*]Fixed an issue where frozen beaches were generating in places they shouldn't. Existing frozen beaches will revert to normal beaches.
 [/list]
 
